# ALPHA-OS

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md
.github/workflows/: build-container.yml
docs/: README.md  developer_guide.md  faqs.md  getting_started.md  troubleshooting.md
src/: bootloader.asm  kernel.c
src/grub/: grub.cfg
src/include/: kernel.inc
src/include/hardware/: esp32.inc  raspberry_pi.inc  rp2040.inc  stm32.inc  thumby.inc
src/kernel/: detect.asm  main.asm
src/kernel/ESP32/: esp32.asm
src/kernel/GENERAL/: other.asm
src/kernel/RP2040/: CMakeLists.txt  raspberry_pi.asm  rp2040.asm
src/kernel/STM32/: stm32.asm
src/kernel/THUMBY/: thumby.asm
src/rtos/: communication.asm  example.asm  rtos_core.asm  scheduler.asm  task_manager.asm
